@@ -66,6 +66,11 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.13.0</version>
+        <configuration>
+          <source>24</source>
+          <target>24</target>
+          <compilerArgs>--enable-preview</compilerArgs>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.openjfx</groupId>
@@ -74,7 +79,7 @@
         <execution>
           <id>default-cli</id>
           <configuration>
-            <mainClass>com.desk.classmesh/com.desk.classmesh.ClassMesh</mainClass>
+            <mainClass>com.desk.classmesh</mainClass>
             <launcher>app</launcher>
             <jlinkZipName>app</jlinkZipName>
             <jlinkImageName>app</jlinkImageName>
